kubernetes/apps/authentication/dex/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex
spec:
  hostnames:
    - dex.damacus.io
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: dex
          namespace: authentication
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
